# vgi-geocode

./: CLAUDE.md  Makefile  README.md  conftest.py  geocode_worker.py  pyproject.toml
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
test/sql/: distance.test  reverse.test
tests/: test_geocoder.py  test_scalars.py
vgi_geocode/: __init__.py  geocoder.py  scalars.py  schema_utils.py
